# Processor

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  PRODUCT.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/images/: README.md
processor_playground/: _json_repository.py  api.py  data_type_repository.py  database_repository.py  mcp_server.py  models.py  node_kinds.py  primitives.py  repository.py  scripting.py  simulator.py  sql.py  templates.py  testing.py
processor_playground/static/: app.js  components.js  index.html  nodes.js  style.css
processor_playground/static/lib/: api.js  html.js
scripts/: build_half_or_double.py  build_request_response_demo.py
tests/: test_api.py  test_catalogs.py  test_mcp_server.py  test_models.py  test_models_and_api.py  test_repositories.py  test_repository.py  test_script_runner.py  test_scripting.py  test_simulator.py  test_sql.py  test_templates.py  test_testing.py
